    kFreeBSD laptops.
  * Removed unnecessary Recommends of xfonts-base, which is included
    in X anyway, and lintian complains about.
  * Updated to debhelper v8.
  * Don't generate Task field overrides for tasks that have only Key
    packages. In other words, the Task field overrides are not needed,
    and are going away.

  [ Christian Perrier ]
  * Replace aspell-fi by libenchant-voikko in finnish task
    Closes: #585840

  [ Translations of tasks ]
  * Nepali (shyam krishna bal).  Closes: #615007

 -- Joey Hess <joeyh@debian.org>  Sun, 27 Feb 2011 00:04:29 -0400

tasksel (2.89) unstable; urgency=low

  [ Joey Hess ]
  * kde-desktop: Add kdeaccessibility. Closes: #610790

  [ Otavio Salvador ]
  * gnome-desktop: drop xsane since gnome meta-package depends on
    simple-scan. Closes: #611951.
  * hungarian-desktop: use hunspell-hu instead of myspell-hu to fix
    spell checking on Iceweasel and OpenOffice. Thanks to Szabolcs
    Siebenhofer <the7up@gmail.com> for the patch. Closes: #611937.

  [ Christian Perrier ]
  * Replace myspell-hu by hunspell-hu in hungarian task
    Closes: #611937

 -- Otavio Salvador <otavio@debian.org>  Mon, 07 Feb 2011 19:20:28 -0200

tasksel (2.88) unstable; urgency=low

  * Make gnome-core key, as of 1:2.30+7 it includes the rest of the stuff
    needed for key in gnome-desktop, except for gdm3. 
  * lxde-desktop: Add gdm to key, to ensure it's available on CDs.
  * kde-desktop: Add qt4 perl packages now used by debconf.

 -- Joey Hess <joeyh@debian.org>  Mon, 06 Dec 2010 16:51:09 -0400

tasksel (2.87) unstable; urgency=low

  [ Christian Perrier ]
  * Drop to be obsoleted foomatic* and printconf from
    print-server, lxde-desktop, xfce-desktop and desktop.
    See #598639

  [ Joey Hess ]
  * Add foomatic-db-engine, still needed.
  * Slim gnome-desktop's set of Key packages down to some that will hopefully
    fit in CD#1 while still providing a usable gnome. (This does not change