@@ -11,8 +11,8 @@ textdomain('tasksel');
 my $debconf_helper="/usr/lib/tasksel/tasksel-debconf";
 my $testdir="/usr/lib/tasksel/tests";
 my $packagesdir="/usr/lib/tasksel/packages";
-my $descdir="/usr/share/tasksel";
-my $localdescdir="/usr/local/share/tasksel";
+my $descdir="/usr/share/tasksel/descs";
+my $localdescdir="/usr/local/share/tasksel/descs";
 my $statusfile="/var/lib/dpkg/status";
 my $infodir="/usr/lib/tasksel/info";
 my $testmode=0;
